--- a/Source/BambuSharp/BambuSharp.csproj
+++ b/Source/BambuSharp/BambuSharp.csproj
@@ -4,7 +4,37 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <VersionPrefix>0.9.0</VersionPrefix>
+    <VersionSuffix>beta</VersionSuffix>
+    <Title>BambuSharp</Title>
+    <Authors>Chris Tacke</Authors>
+    <Description>An open-source .NET API for Bambu Labs printers</Description>
+    <Copyright>2025</Copyright>
+    <PackageProjectUrl>https://github.com/ctacke/BambuSharp</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/ctacke/BambuSharp</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>bambu;bambu labs</PackageTags>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+      
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="icon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Meadow.Units" Version="2.4.0.15-beta" />
